Bug 125465 - REGRESSION(r160260): Memory pressure signal causes web process to hang.
Summary: REGRESSION(r160260): Memory pressure signal causes web process to hang.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Page Loading (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 12:17 PST by Andreas Kling
Modified: 2013-12-09 13:12 PST (History)
3 users (show)

See Also:


Attachments
Patch (1.63 KB, patch)
2013-12-09 12:19 PST, Andreas Kling
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-12-09 12:17:15 PST
Sending the memory pressure signal to the web process causes it to hang in MemoryCache::pruneLiveResourcesToSize(unsigned).
Comment 1 Andreas Kling 2013-12-09 12:19:16 PST
Created attachment 218788 [details]
Patch
Comment 2 Tim Horton 2013-12-09 12:23:57 PST
Comment on attachment 218788 [details]
Patch

Whoops :|
Comment 3 WebKit Commit Bot 2013-12-09 13:12:23 PST
Comment on attachment 218788 [details]
Patch

Clearing flags on attachment: 218788

Committed r160327: <http://trac.webkit.org/changeset/160327>
Comment 4 WebKit Commit Bot 2013-12-09 13:12:25 PST
All reviewed patches have been landed.  Closing bug.