REGRESSION(r160260): Memory pressure signal causes web process to hang. <https://webkit.org/b/125465>

Reviewed by Tim Horton.

This command caused all of my web processes to hang:

    notifyutil -p org.WebKit.lowMemory

This only happens when the cache pruning code encounters a resource
using purgeable memory.

* loader/cache/MemoryCache.cpp:
(WebCore::MemoryCache::pruneLiveResourcesToSize):

    Grab the next CachedResource pointer before continuing the loop.


Canonical link: https://commits.webkit.org/143542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160327 268f45cc-cd09-0410-ab3c-d52691b4dbfc