Source/WebCore/loader/cache/MemoryCache.cpp
@@ -266,8 +266,10 @@ void MemoryCache::pruneLiveResourcesToSize(unsigned targetSize)
             if (elapsedTime < cMinDelayBeforeLiveDecodedPrune)
                 return;
 
-            if (current->decodedDataIsPurgeable())
+            if (current->decodedDataIsPurgeable()) {
+                current = prev;
                 continue;
+            }
 
             // Destroy our decoded data. This will remove us from 
             // m_liveDecodedResources, and possibly move us to a different LRU 
